--- a/about.html
+++ b/about.html
@@ -1,12 +1,11 @@
 ---
 layout: page
 title: About Me
-description: This is what I do.
+description: 
 background: '/img/bg-about.jpg'
 ---
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed quisquam ut perspiciatis, repudiandae nulla animi iste vel, praesentium repellendus molestias aliquid consequatur, earum rem qui error voluptates eius enim consequuntur!</p>
+<p>Hi! My name is Helen. I am currently a master student major in Electrical Engineering. Technology is fun! I love coding and solving problems. As we all know, practice is the key to master things. This blog is for keeping track of my learning & practice paths. If you have problems or suggestions, feel free to contact me!</p>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex alias, earum consectetur quia natus ducimus voluptate explicabo, hic porro reprehenderit, quasi? Tenetur ipsum distinctio laboriosam perspiciatis officiis dolore, architecto id.</p>
+<p>Secret: I adopt a cat recently, her name is Riza!</p>
 
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
